# Tower-Defense

./: .gitignore  Button.py  Map1.xcf  Map2.xcf  README.md  Tower.py  Waves.json  WaypointsCreator.py  button_template.xcf  constants.py  dummyEntity.py  endingScreen.py  enemy.py  enemyTemplateCreator.py  enemyTemplates.json  main.py  map1_waypoints.json  playerAbilities.py  projectile.py  pyproject.toml  run_game.py  userInterface.py  waveCreator.py  waveLoader.py  waypointsCreator.py
building/: buildManager.py  buildingBlueprint.py
data/: Waves.json  enemyTemplates.json  levels_config.json  map1_waypoints.json  map2_waypoints.json  map3_waypoints.json  map4_waypoints.json  tower_presets.json  waves_level1.json  waves_level2.json  waves_level3.json  waves_level4.json  waves_waves_level2.json
economy/: resourcesFactory  resourcesFactory.py  resourcesManager.py
enemy/: __init__.py  abilities.py  abstractEnemyAbilities.py  enemy.py  enemyArmored.py  enemyBoss.py  enemyMagicResistant.py  enemyRanged.py  enemyTemplateCreator.py  enemy_armored.py  enemy_invisible.py  enemy_magic_resistant.py
scripts/: Button.py  Tower.py  constants.py  endingScreen.py  main.py  path_utils.py  pauseScreen.py  playerAbilities.py  projectile.py  userInterface.py  waveLoader.py  waypointsCreator.py
scripts/building/: __init__.py  buildManager.py  buildingBlueprint.py
scripts/economy/: __init__.py  resourcesFactory.py  resourcesManager.py
scripts/enemy/: __init__.py  abilities.py  abstractEnemyAbilities.py  enemy.py
src/: __init__.py  main.py
src/config/: __init__.py  colors.py  paths.py  settings.py
src/core/: __init__.py  event_manager.py  game.py  game_state.py  game_world.py
src/entities/: __init__.py  abilities.py  base_entity.py  enemy.py  factory.py  projectile.py  tower.py
src/systems/: __init__.py  build_manager.py  economy_system.py  player_abilities.py  spawn_system.py
src/ui/: __init__.py  ui_manager.py
src/ui/components/: __init__.py  button.py  hud.py
src/ui/screens/: __init__.py  base_screen.py  ending_screen.py  game_screen.py  level_select.py  main_menu.py
src/utils/: __init__.py  asset_loader.py  path_utils.py  waypoint_loader.py
tests/: test_economy.py
tools/: __init__.py  enemy_template_creator.py  wave_creator.py  waypoint_creator.py
